-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.1.0.0-incubating
-
Component/s: Core
-
Labels:None
There are residual process after running some queries. Through the call stack, we find that there is an endless loop in function writer_wait_for_acks() in shared input scan.
We plan to add max retry times to avoid this problem.
Also, there are some file handler leaks in retry_read() and retry_write() of shared input scan.
- relates to
-
HAWQ-1342 QE process hang in shared input scan on segment node
-
- Closed
-
- links to