HAWQ-1282. Shared Input Scan may result in endless loop.